# marimo.nvim

./: .gitignore  AGENTS.md  README.md  lazy.lua  pyproject.toml
dev/: minimal-init.lua  minimal-nvim
lua/hermabr/marimo_nvim/: commands.lua  init.lua  markers.lua  state.lua  util.lua
lua/marimo/: buffer.lua  commands.lua  images.lua  indicator_window.lua  init.lua  lsp_bridge.lua  markers.lua  navigation.lua  notebook.lua  output.lua  output_window.lua  python.lua  render.lua  rich_output.lua  runtime.lua  runtime_state.lua  session.lua  snapshot.lua  state.lua  util.lua  worker.lua
marimo_nvim_py/: bridge.py  cell_changes.py  codec.py  consumer.py  kernel.py  models.py  projected.py  session.py  session_manager.py  sessions.py  worker.py
python/: marimo_nvim_worker.py
src/marimo_nvim_py/: __init__.py  __main__.py  worker.py
tests/: marimo_spec.lua  run.lua
tests/python/: test_worker.py
