[project]
name = "marimo-nvim-dev"
version = "0.1.0"
description = "Development environment for marimo.nvim"
requires-python = ">=3.10"
dependencies = [
  "marimo",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/python"]
